@@ -1,3 +1,7 @@
+2008-01-14  Martin Lambers <marlam@marlam.de>
+
+	* src/tonemap_selector.cpp: Tune default values for reinhard05 method.
+
 2008-01-13  Martin Lambers <marlam@marlam.de>
 
 	* src/tonemap_selector.h, src/tonemap_selector.cpp, src/view_area.cpp:
